import net.fabricmc.loom.task.DownloadTask
import net.fabricmc.loom.task.FabricModJsonV1Task
import net.fabricmc.loom.task.prod.ClientProductionRunTask

import java.util.concurrent.TimeUnit

plugins {
    id "org.jetbrains.kotlin.jvm" version "2.1.0"
    id "net.fabricmc.fabric-loom-remap" version "${loom_version}"
    id "com.diffplug.spotless" version "8.1.0"
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id("org.jetbrains.gradle.plugin.idea-ext") version "1.3"
}

apply from: "${rootDir}/gradle/secrets.gradle"

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}


idea {
//    project.settings.compiler.javac {
//        // Disable “Report use of deprecated features” https://github.com/JetBrains/gradle-idea-ext-plugin/wiki#javac-settings-of-idea-compiler
//        generateDeprecationWarnings = false
//    }

    module {
        downloadJavadoc = true
        downloadSources = true
    }
}

repositories {
    maven { url = "https://maven.shedaniel.me/" }
    maven { url = "https://maven.terraformersmc.com/releases/" }
    maven {
        name = 'ParchmentMC'
        url = 'https://maven.parchmentmc.org'
    }

//    ivy {
//        url = "https://github.com/cabaletta/baritone/releases/download"
//        patternLayout {
//            artifact("v[revision]/[module]-[revision].jar")
//        }
//        metadataSources {
//            artifact() // no ivy.xml or pom
//        }
//    }
    maven {
        name = 'babbaj-repo'
        url = 'https://babbaj.github.io/maven/'
    }
    maven {
        name = 'enginehub-repo'
        url = 'https://maven.enginehub.org/repo/'
    }
    exclusiveContent {
        forRepository {
            maven {
                name = 'tolland-baritone'
                url = uri("https://maven.pkg.github.com/tolland/baritone")
                credentials {
                    username = getSecret("GITHUB_ACTOR")
                    password = getSecret("GITHUB_TOKEN")
                }
            }
        }
        filter {
            includeGroup "baritone"
        }
    }
    exclusiveContent {
        forRepository {
            maven {
                name = 'tolland-wurst'
                url = uri("https://maven.pkg.github.com/tolland/Wurst7")
                credentials {
                    username = getSecret("GITHUB_ACTOR")
                    password = getSecret("GITHUB_TOKEN")
                }
            }
        }
        filter {
            includeGroup "net.wurstclient"
        }
    }
    exclusiveContent {
        forRepository {
            maven {
                name = 'tolland-worldtools'
                url = uri("https://maven.pkg.github.com/tolland/WorldTools")
                credentials {
                    username = getSecret("GITHUB_ACTOR")
                    password = getSecret("GITHUB_TOKEN")
                }
            }
        }
        filter {
            includeGroup "worldtools"
        }
    }
    exclusiveContent {
        forRepository {
            maven {
                name = "Modrinth"
                url = "https://api.modrinth.com/maven"
            }
        }
        filter {
            includeGroup "maven.modrinth"
        }
    }
//    ivy {
//        url 'https://github.com/tolland/Wurst7/releases/download'
//        patternLayout {
//            artifact '[revision]/[module]-[revision](-[classifier]).[ext]'
//        }
//        metadataSources {
//            artifact()
//        }
//    }
}


dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings loom.layered() {
        officialMojangMappings()
        parchment("org.parchmentmc.data:parchment-1.21.8:2025.09.14@zip")
    }
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
    testImplementation "net.fabricmc:fabric-loader-junit:${project.loader_version}"

    implementation "org.eclipse.paho:org.eclipse.paho.client.mqttv3:${paho_client_version}"
    implementation 'org.yaml:snakeyaml:2.0'

    modImplementation "baritone:baritone-fabric:${project.baritone_version}"
    modImplementation "net.wurstclient:wurst-client:${project.wurst_version}"

    modImplementation "worldtools:worldtools-fabric:${project.worldtools_version}"
    modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_api_version}") {
        exclude(group: "net.fabricmc.fabric-api")
    }
    implementation "dev.babbaj:nether-pathfinder:${project.nether_pathfinder_version}"
    implementation "io.moquette:moquette-broker:0.17"

    modImplementation "maven.modrinth:fabric-language-kotlin:${kotlin_language_plugin_version}"
    modImplementation "maven.modrinth:modmenu:${mod_menu_version}"
    modImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.1"
//    modImplementation "maven.modrinth:worldedit-cui:${worldedit_cui_version}"
    compileOnly "org.jetbrains:annotations:${project.jetbrains_annotations_version}"
    modImplementation 'org.jetbrains.kotlin:kotlin-reflect:2.1.21'


    testImplementation "org.mockito:mockito-core:${project.mockito_version}"
    // optional for JUnit 5 integration if you plan to use MockitoExtension
    // testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"

    // WorldEdit related dependencies
    // implementation group: 'org.enginehub.worldeditcui-protocol', name: 'worldeditcui-protocol-fabric-mc1.21.8', version: '4.0.1'
    // modImplementation "maven.modrinth:worldedit:${worldedit_version}"

    // fabric-loom needs to depend on namedElements as the normal outpus
    // are mapped to intermediary names
    // <https://docs.fabricmc.net/develop/loom/#subprojects>
    // implementation project(path: ":name", configuration: "namedElements")
    //}

}

sourceSets {
    "src-py" {
        java {
            srcDir "src-py"
        }
    }
}

fabricApi {
    configureTests {
        createSourceSet = true
        modId = "mqttbot-test"
        enableGameTests = false
        enableClientGameTests = true
        eula = true
        username = mcUsername as String
    }
}

tasks.named("compileTestJava") {
    dependsOn("compileGametestJava")
}

tasks.register("generateModJson", FabricModJsonV1Task) {
    outputFile = file("fabric.mod2.json")

    json {
        modId = "examplemod"
        version = "1.0.0"
    }
}

loom {
    // docs: <https://docs.fabricmc.net/develop/loom/options>
    // fabricModJsonPath = file("src/custom/resources/fabric.mod.json")
    accessWidenerPath = file("src/main/resources/mqttbot.accesswidener")

    // splitEnvironmentSourceSets() # currently breaking gametests
    log4jConfigs.from(file("configs/log4j.xml"))

    mods {
        "mqttbot" {
            sourceSet sourceSets.main
        }
    }
    runs {

        client {
            programArgs(
                    "--username", mcUsername as String,
//                    "--quickPlaySingleplayer", "TestFabricModWorld1"
                    "--quickPlayMultiplayer", "docker.lan:25565"
            )
            // environmentVariable("example", "true")
            // runDir = "run"
        }
        clientWithMods {
            inherit client
        }
        clientWithMods2 {
            inherit client
        }
        clientGameTest {
            source sourceSets.gametest
            vmArgs.add("-Dfabric.client.gametest")
            vmArgs.add("-Dfabric.client.gametest.disableNetworkSynchronizer=true")
        }
        clientGameTest2 {
            inherit clientGameTest
            source sourceSets.gametest
            vmArgs.add("-Dfabric.client.gametest")
            vmArgs.add("-Dfabric.client.gametest.disableNetworkSynchronizer=true")
        }
    }
}

tasks.register("download", DownloadTask) {
    url = "https://raw.githubusercontent.com/tolland/mqtt-automaton-mod/refs/heads/1.21.8-develop/LICENSE"
    output = file("out.txt")
}

tasks.register('runClientWithTests') {
    group = 'fabric'
    description = 'Run client with pytest tests'

    doLast {
        // Start runClient in background
        def clientProcess = tasks.runClient.exec()

        try {
            // Give the client time to start and connect
            Thread.sleep(5000)

            // Run pytest
            def testProcess = new ProcessBuilder('pytest', '-v')
                    .inheritIO()
                    .start()

            def testExitCode = testProcess.waitFor()

            if (testExitCode != 0) {
                throw new GradleException("Tests failed with exit code: $testExitCode")
            }
        } finally {
            // Kill the client process
            clientProcess.destroyForcibly()
            clientProcess.waitFor(5, TimeUnit.SECONDS)
        }
    }
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}
compileJava.dependsOn spotlessApply

tasks.withType(JavaCompile).configureEach {
    // Minecraft 1.21 uses Java 21.
    it.options.release = 21
}

java {
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    inputs.property "archivesName", project.base.archivesName
    from("LICENSE") {
        rename { "${it}_${inputs.properties.archivesName}" }
    }
    from {
        configurations.compileClasspath.findAll {
            (it.name.endsWith('jar') && it.name.contains('org.eclipse.paho.client.mqttv3'))
        }
    }.collect {
        zipTree(it)
    }
}

spotless {
    java {
        removeUnusedImports()
        leadingSpacesToTabs()
        trimTrailingWhitespace()
        eclipse().configFile(file("codestyle/formatter.xml"))
    }
    json {
        target("src/**/*.json", "src/**/*.mcmeta")
        gson().indentWithSpaces(2).version("2.11.0")
    }
}

test {
    useJUnitPlatform()
}


tasks.register("runProductionClientGameTest", ClientProductionRunTask) {
    jvmArgs.add("-Dfabric.client.gametest")
    // Whether to use XVFB to run the game, using a virtual framebuffer. This is useful for headless CI environments.
    // Defaults to true only on Linux and when the "CI" environment variable is set.
    // XVFB must be installed, on Debian-based systems you can install it with: `apt install xvfb`
    useXVFB = true
}

tasks.register("printUsername") {
    doLast {
        println getSecret("GITHUB_ACTOR")
    }
}

tasks.register("printGametestClasspath") {
    doLast {
        sourceSets.gametest.compileClasspath.each {
            println it
        }
    }
}


tasks.register("printMainClientClasspath") {
    doLast {
        sourceSets.main.compileClasspath.each {
            println it
        }
    }
}
